# tree-sitter-ftl

./: Cargo.toml  binding.gyp  generator.sh  grammar.js  package.json  tester.sh
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: expression.txt  interpolation.txt  main.txt
examples/: custom.ftl  if.ftl
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.cc
